          02-08-13  Bfo     Some more variables defined at the real procid struct now.
          02-08-13  Bfo     grp,usr and prior at the real prdsc now
          02-08-14  Bfo     Some more variables of the real "procid" record used now
          02-09-01  Bfo     Some debug messages reduced.
          02-09-01  Bfo     big/little endian bug with *idp fixed
    3.16  02-09-??  Bfo     ...
    -------------------
*/




/* unresolved bugs: */
/*
    !!  "_" name convention on Windows (hawk_C0).
    !!  "show" is using some unimplemented FPU calls.
    
    -   MPW uses its I/O currently partly also for the tty/pty system.
    -   "mgencas" will not startup over network (Linux), "mme" has also problems.
    -   "plotf" orig/max times not correct, problem in UAE FPU => workaround: use plotf instead of plotf020
    -   Linux telnet close still quits emulator (recognition of end cond not correctly)
    -   "inetd" superdaemon is not yet running correctly.
    -   Mouse movements on XServer still slow and jumpy.
    -   MGP slow startup problems (NT 4.0).
    -   Problems 'ps -e' and check memory info of "ps" (for trap handlers)
    -   inode support for transparent Mac file system
    -   A$AtDate restricted to 248 days / will not adjust when system time changes
    -   'showprocs -e' crash on Windows.

   (+)  Take tty00/pty00 first (problems with arbitration)
   (+)  setime_Y2K version with param passing --> 1900
   (-)  'pragma unused' not possible with gcc (Linux): cuts the file there !!
   (-)  mfree "os9serial" too small ??
*/


/* To do: */
/*
    -   RBF algorithm is not yet adapted for multisector support
    -   RBF disk cache not yet implemented.
    -   RBF: do read only, if write larger than a sector
    -   SCSI subsystem for Linux
    -   "ping" for Windows & Linux, ping of ISP.
    -   socket close not done in every case
    -   nameserver support for network
    -   direct line editing on linux (over network)